[tool.poetry]
name = "backend"
version = "1.0.0"
description = "Backend for the ChronMaps project"
authors = ["quorth0n <lpoflynn@protonmail.ch>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
django-extensions = "^3.1.5"
Django = "^4.1.7"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"
factory-boy = "^3.2.1"
django-colorfield = "^0.6.3"
django-simple-history = "^3.0.0"
djangorestframework = "^3.13.1"
djangorestframework-gis = "^0.18"
requests = "^2.27.1"
django-ordered-model = "^3.5"
django-redis = "^5.2.0"
django-cacheops = "^6.0"
drf-firebase-auth = {git = "https://github.com/quorth0n/drf-firebase-auth", rev = "issue-40"}
jdcal = "^1.4.1"
openpyxl = "^3.0.9"
celery = "^5.2.3"
docutils = "^0.18.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
typing_extensions = "^4.1.1" # https://github.com/psf/black/issues/1928
pylint = "^2.15.10"
ipython = "^8.0.1"
django-silk = "^4.2.0"
django-debug-toolbar = "^3.2.4"

[tool.poetry.group.dev.dependencies]
pylint-django = "^2.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
